@@ -1,5 +1,7 @@
 *SVN*
 
+* Hash#slice(*keys) returns a new hash with only the given keys. #slice! replaces the hash with only the given keys. Works with HashWithIndifferentAccess also.  [Jeremy Kemper]
+
 * HashWithIndifferentAccess#to_hash converts to a Hash with String keys and the same default value.  [Jeremy Kemper]
 
 * Fix remove_constant to correctly handle constant names of the form "::A::...". References #6720. [Nicholas Seckar]
